--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "jasmine-jquery": "~1.5.92",
-    "jasmine": "~1.3.1"
+    "jasmine": "~1.3.1",
+    "jquery": "~2.0.3"
   }
 }
