--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "jasmine-jquery": "~1.5.92",
     "jasmine": "~1.3.1",
-    "jquery": "~2.0.3"
+    "jquery": "~2.0.3",
+    "jquery-color": "~2.1.2"
   }
 }
